textbox overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,12 @@ body::-webkit-scrollbar {
 }
 
 #display {
-   height: 100px;
+   min-height: 100px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    padding-left: 5rem;
+   padding-right: 5rem;
    color: white;
    font-size: 32px;
    background-color: #171717;
